# aetpi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: prepare_release.yaml  release.yaml  test.yml  verify.yaml
src/aetpiref/: __init__.py  typing.py
